--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>OnSpace Agency</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://lh3.googleusercontent.com/drive-viewer/AFGJ81rza3WGhtlTyggnrqaVca9J37L1P-NPtxskMkdJGejWCjfL3L_LhdviDONaaRuDNGfbiW32-x5NKyRPeQSKlqDbbYo-Xg=w1920-h929">
 </head>
 <body>
   <app-root></app-root>
